fix(client): make sure submission timestamp is not wrapped

--- a/judgels-client/src/components/SubmissionDetails/Programming/SubmissionDetails.scss
+++ b/judgels-client/src/components/SubmissionDetails/Programming/SubmissionDetails.scss
@@ -40,6 +40,11 @@
     margin-bottom: 25px;
   }
 
+  .general-info__time {
+    white-space: nowrap;
+    line-height: 24px;
+  }
+
   .compilation-output {
     margin-top: 10px;
   }
